--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 
     .param-row input[type="number"] {
       width: 100%;
-      padding: 2px 2px;
+      max-height: 30px;
+      padding: 2px 5px;
       border: 1px solid #ccc;
       border-radius: 4px;
       font-size: 14px;
